--- a/manifest.json
+++ b/manifest.json
@@ -4,15 +4,39 @@
         "description": "§l§bMade by LC Studios MC. Helped by Kaiboi39 and RianDewa45.\n§cYou have to enable Holiday Creator Features and Molang Features in experiments.\n§7Thank you for download!",
         "name": "§g[DEV] §d§lSCP: Dystopia RP §7v1.8.1§f",
         "uuid": "03cce329-48ac-45be-ae8a-4301f4687e46",
-        "version": [ 1, 8, 1 ],
-        "min_engine_version": [ 1, 17, 0 ]
+        "version": [
+            1,
+            8,
+            1
+        ],
+        "min_engine_version": [
+            1,
+            17,
+            0
+        ]
     },
     "modules": [
         {
-            "description": "apapapappaasexboompornhub",
+            "description": "Made by LC Studios MC",
             "type": "resources",
-            "uuid": "6309981e-21cc-452b-a09f-c41de1390a3e",
-            "version": [ 1, 8, 1 ]
+            "uuid": "15e4494f-d558-46e0-9108-ca086eca59ef",
+            "version": [
+                1,
+                8,
+                1
+            ]
+        }
+    ],
+    "subpacks": [
+        {
+            "folder_name": "hazmat",
+            "memory_tier": 1,
+            "name": "§7§lHazmat Delta-1"
+        },
+        {
+            "folder_name": "normal",
+            "memory_tier": 1,
+            "name": "§4§lNormal Delta-1"
         }
     ]
 }
