--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,9 @@
             ]
         }
     ],
+    "capabilities": [
+        "pbr"
+    ],
     "subpacks": [
         {
             "folder_name": "hazmat",
